@@ -1,3 +1,7 @@
+2015-09-11 Franz Holzinger <franz@ttproducts.de>
+	* bug fix: The modified dataArray must be stored internally.
+	* bug fix: The saved checkbox value for the acknowledged terms did not get stored.
+
 2015-09-10 Franz Holzinger <franz@ttproducts.de>
 	* bug fix: deletion of image. The Javascript onsubmit function of the deletion image input field loses the field name called submit_delete. Write a new Javascript function to have also fewer code.
 	* bug fix: show TCA type check correctly in the preview and save it as a bit field integer
